--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,8 +37,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.project"
-        minSdkVersion flutter.targetSdkVersion//localProperties.getProperty('flutter.minSdkVersion').toInteger()//
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 30//flutter.targetSdkVersion//localProperties.getProperty('flutter.minSdkVersion').toInteger()//
+        targetSdkVersion 30//flutter.targetSdkVersion
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
