--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   ar_flutter_plugin: ^0.6.4
   google_fonts: ^2.3.2
+  animated_text_kit: ^4.2.2
+  # custom_info_window: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
