--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,15 @@ dependencies:
   google_maps_flutter: ^2.1.12
   location: ^4.4.0
   flutter_polyline_points: ^1.0.0
-  ar_flutter_plugin: ^0.6.4
   google_fonts: ^2.3.2
   animated_text_kit: ^4.2.2
+  ar_flutter_plugin: ^0.6.4
+  permission_handler: ^8.1.6
+  vector_math: ^2.1.2
+  json_annotation: ^4.5.0
+  geolocator: ^7.6.2
+  flutter_archive: ^5.0.0
+  path_provider: ^2.0.11
   # custom_info_window: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
