--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^7.6.2
   flutter_archive: ^5.0.0
   path_provider: ^2.0.11
+  geofence_service: ^3.5.0
   # custom_info_window: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
