--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_archive: ^5.0.0
   path_provider: ^2.0.11
   geofence_service: ^3.5.0
+  flutter_dotenv: ^5.1.0
   # custom_info_window: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
@@ -78,6 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
