--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,11 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   google_fonts: ^2.3.2
   animated_text_kit: ^4.2.2
-  ar_flutter_plugin: ^0.6.4
-  permission_handler: ^8.1.6
+  ar_flutter_plugin: ^0.7.3
+  permission_handler: ^10.1.0
   vector_math: ^2.1.2
   json_annotation: ^4.5.0
-  geolocator: ^7.6.2
+  geolocator: ^9.0.0
   flutter_archive: ^5.0.0
   path_provider: ^2.0.11
   geofence_service: ^3.5.0
@@ -79,7 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
